try to fix overflow
try to fix overflow

--- a/src/app/demande-combat-dialog/demande-combat-dialog.component.css
+++ b/src/app/demande-combat-dialog/demande-combat-dialog.component.css
@@ -1,3 +1,7 @@
+:host ::ng-deep .p-dropdown-panel .p-dropdown-items {
+  overflow: visible;
+}
+
 :host ::ng-deep .p-dialog .p-dialog-header {
   background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(25,25,25,1) 0%, rgba(39,39,39,1) 50%, rgba(25,25,25,1) 100%);
   color: white;
